remove the blue border & some spacing issues

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,4 @@
 .footer {
-  margin-top: 2rem;
   padding: 1rem 0;
   background-color: var(--color-light);
 }
