--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,4 @@
 .header {
-  margin-bottom: 1rem;
   border-bottom: 1px solid var(--color-light);
 }
 .header > .container-md {
