--- a/src/components/projects-list/projects-list.css
+++ b/src/components/projects-list/projects-list.css
@@ -5,9 +5,6 @@
 .all-projects-list li:not(:first-child) {
   margin-top: 2rem;
 }
-.all-projects-list li p {
-  font-size: smaller;
-}
 .all-projects-list li a {
   font-family: 'Circular Std Bold';
 }
